syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.app.grpc";

message VoidRegistrationDetailsRequest{}

message RegistrationDetails{
  string firstName = 1;
  string lastName = 2;
  string emailId = 3;
  bool isAdmin = 4;
}

message RegistrationDetailsResponse{
  repeated RegistrationDetails allRegistrationRequest = 1;


}

service RegistrationDetailsAction{
  rpc fetchRegistrationDetails(VoidRegistrationDetailsRequest) returns (RegistrationDetailsResponse){}
}